--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,75 @@
     <title><%= full_title(yield(:title)) %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="utf-8">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  </head>
+      
+     <%= render 'layouts/shim' %>
+    <%= render 'layouts/rails_default' %>
+    </head>
+      
+    <style>
+    
+  /* header */
+  #logo {
+    float: left;
+    margin-right: 10px; 
+    font-size: 1.7em;
+    color: #fff; 
+    text-transform: uppercase; 
+    letter-spacing: -1px;  
+    padding-top: 9px; 
+    font-weight: bold;
+    &:hover {
+      color: #fff; 
+      text-decoration: none;
+        }
+      }
+    
+      header {
+        background: #000;
+      }
+   /* universal */
+   textarea {
+   resize: vertical;
+   }
+   .center {
+   text-align: center;
+    h1 { margin-bottom: 10px;
+      }
+     }
+   
+   
+     /* typography */
+     h1, h2, h3, h4, h5, h6 { line-height: 1;
+     }
+     h1 {
+     font-size: 3em; letter-spacing: -2px; margin-bottom: 30px; text-align: center;
+     }
+     h2 {
+     font-size: 1.0em; letter-spacing: -1px; margin-bottom: 30px; text-align: center; font-weight: normal; color: #777;
+      
+      /* footer */
+      
+      footer {margin-top: 45px; padding-top: 5px; border-top: 1px solid #eaeaea; color: #777;}
+      
+      footer a { color: #555;
+      }
+      footer a:hover { color: #222;
+      }
+      footer small { float: left;
+      }
+      footer ul {
+      float: right; list-style: none;
+      }
+      footer ul li { float: left; margin-left: 15px;
+      }
+      
+    </style>
 
   <body>
+    <%= render 'layouts/header' %>
+    <div class="container">
     <%= yield %>
+    <%= render 'layouts/footer' %>
+    </div>
   </body>
 </html>
