--- a/app/views/layouts/_rails_default.erb
+++ b/app/views/layouts/_rails_default.erb
@@ -1,7 +1,7 @@
 	<%= csrf_meta_tags %>
 <%= csp_meta_tag %>
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boostrap@4.6.1/dist/css/bootsrap.min.css"/>
 	
   
  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
