--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,76 +1,185 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"/>
     <title><%= full_title(yield(:title)) %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="utf-8">
       
-     <%= render 'layouts/shim' %>
+    <%= render 'layouts/shim' %>
     <%= render 'layouts/rails_default' %>
-    </head>
-      
     <style>
-    
-  /* header */
-  #logo {
-    float: left;
-    margin-right: 10px; 
-    font-size: 1.7em;
-    color: #fff; 
-    text-transform: uppercase; 
-    letter-spacing: -1px;  
-    padding-top: 9px; 
-    font-weight: bold;
-    &:hover {
-      color: #fff; 
-      text-decoration: none;
-        }
+        
+      /* universal */
+      textarea {
+        resize: vertical;
       }
-    
+     
+      .center {
+        text-align: center;
+      }
+      
+      .center h1 {
+        margin-bottom: 10px;
+        text-align: center;
+        font-size: 3em;
+      }
+       
+      /* typography */
+      h1, h2, h3, h4, h5, h6 {
+        line-height: 1;
+      }
+      
+      h1 {
+        font-size: 3em;
+        letter-spacing: -2px;
+        margin-top: 20px;
+        margin-bottom: 10px;
+        text-align: center;
+      }
+      
+      h2 {
+        font-size: 1.0em;
+        letter-spacing: -1px;
+        margin-bottom: 30px;
+        text-align: center;
+        font-weight: normal;
+        color: #777;
+      }
+      
+      /* header */
+      #logo {
+        float: left;
+        margin-right: 10px; 
+        font-size: 1.7em;
+        color: #fff; 
+        text-transform: uppercase; 
+        letter-spacing: -1px;  
+        padding-top: 9px; 
+        font-weight: bold;
+      }
+      
+      #logo:hover {
+        color: #fff; 
+        text-decoration: none;
+      }
+      
       header {
         background: #000;
       }
-   /* universal */
-   textarea {
-   resize: vertical;
-   }
-   .center {
-   text-align: center;
-    h1 { margin-bottom: 10px;
-      }
-     }
-   
-   
-     /* typography */
-     h1, h2, h3, h4, h5, h6 { line-height: 1;
-     }
-     h1 {
-     font-size: 3em; letter-spacing: -2px; margin-bottom: 30px; text-align: center;
-     }
-     h2 {
-     font-size: 1.0em; letter-spacing: -1px; margin-bottom: 30px; text-align: center; font-weight: normal; color: #777;
       
       /* footer */
+      footer {
+        margin-top: 45px;
+        padding-top: 5px;
+        border-top: 1px solid #eaeaea; color: #777;
+      }
       
-      footer {margin-top: 45px; padding-top: 5px; border-top: 1px solid #eaeaea; color: #777;}
+      footer a { 
+        color: #555;
+      }
       
-      footer a { color: #555;
+      footer a:hover { 
+        color: #222;
       }
-      footer a:hover { color: #222;
+      
+      footer small { 
+        float: left;
       }
-      footer small { float: left;
-      }
+      
       footer ul {
-      float: right; list-style: none;
-      }
-      footer ul li { float: left; margin-left: 15px;
+        float: right; 
+        list-style: none;
       }
       
-    </style>
+      footer ul li { 
+        float: left; 
+        margin-left: 15px;
+      }
+      
+      /* sidebar */
+      aside section.user_info {
+          margin-top: 20px;
+        }
+       
+      aside section {
+        padding: 10px 0;
+        margin-top: 20px;
+      }
+      
+      aside section:first-child {
+        border: 0;
+        padding-top: 0;
+      }
+      
+      aside section span {
+        display: block;
+        margin-bottom: 3px;
+        line-height: 1;
+      }
+      
+      .usertitle h1 {
+        text-align: left;
+        font-size: 1.4em;
+        letter-spacing: -1px;
+        margin-bottom: 3px;
+        margin-top: 20px;
+      }
+      
+      .gravatar {
+        float: left;
+        margin-right: 10px;
+      }
+       
+      .gravatar_edit {
+        margin-top: 15px;
+      }
+      
+      /* forms */
+      input, textarea, select, .uneditable-input { 
+        border: 1px solid #bbb;
+        width: 100%;
+        margin-bottom: 15px;
+        @include box_sizing;
+      }
+      
+      .signup-form {
+       display: block;
+       max-width: 600px;
+       margin: auto;
+       height: auto !important;
+       margin-bottom: 15px;
+      }
+      
+      #error_explanation {
+        color: red;
+      }
+      
+      #error_explanation:ul {
+        color: red;
+        margin: 0 0 30px 0;
+      }
+      
+      .field_with_errors {
+        @extend .has-error;
+      }
+      
+      .field_with_errors .forms-control {
+        color: $state-danger-text;
+      }
+      
+      </style>
+    </head>
+      
+    
 
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
+      <% flash.each do |message_type, message| %>
+      <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+      <div class="alert alert-<%= message_type %>"><%= message %></div>
+    <% end %>
     <%= yield %>
     <%= render 'layouts/footer' %>
     </div>
