--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,14 +3,48 @@
   <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"/>
     <title><%= full_title(yield(:title)) %></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="utf-8">
-      
+    <meta name="viewport" content="width=device-width,initial-scale=1"> 
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %> 
+    
     <%= render 'layouts/shim' %>
     <%= render 'layouts/rails_default' %>
     <style>
         
       /* universal */
+      .navbar-nav {
+        display: block;
+      }
+      
+      .nav li {
+        display: inline-block;
+        margin: 0 0 0 40px;
+        height: 100%;        
+      }
+      
+      .nav a {
+        color: grey;
+      }
+      
+      .navbar-nav .dropdown-menu {
+        position: absolute;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        display: none;
+        left: -100px;
+        padding: 8px 15px;
+      }
+      
+      .dropdown-menu.visible {
+        display: block;
+      }
+      
+      div.col-md-6.col-md-offset-3 {
+       margin: 0 20% 0 25%;
+       display: block;
+      }
+      
       textarea {
         resize: vertical;
       }
@@ -99,7 +133,7 @@
       
       /* sidebar */
       aside section.user_info {
-          margin-top: 20px;
+        margin-top: 20px;
         }
        
       aside section {
@@ -168,6 +202,81 @@
         color: $state-danger-text;
       }
       
+      .alert {
+        margin-top: 20px;
+      }
+      
+      @media (max-width: 800px) {
+        .navbar-header {
+          width: 35px;
+          height: 35px;
+          border: 1px solid #ddd;
+          position: absolute;
+          top: 40px;
+          right: 40px;
+          margin: -22px 0 0 -22px;
+          border-radius: 4px;
+          cursor: pointer;
+        }
+      
+      .first-line, .second-line, .third-line {
+        width: 25px;
+        height: 3px;
+        background: #fff;
+        position: absolute;
+        border-radius: 20px;
+        left: 4px;
+      }
+      
+      .first-line {
+        top: 8px;
+      }
+      
+      .second-line {
+        top: 50%;
+        margin-top: -1.5px;
+      }
+      
+      .third-line {
+        bottom: 8px;
+      }
+      
+      .nav.navbar-nav.navbar-right {
+        position: absolute;
+        right: 0;
+        top: 100%;
+        width: 100%;
+        border: 1px solid #ddd;
+        background: white;
+        padding: 8px 12px;
+        border-radius: 5px;
+        display: none;
+      }
+      
+      .nav li {
+        display: block;
+      }
+      
+      .nav.navbar-nav.navbar-right.visible {
+        display: block;
+      }
+      
+      .navbar-nav .dropdown-menu {
+        position: absolute;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        display: none;
+        padding: 8px 15px;
+        top: 120%;
+        left: -5%;
+        width: 100%;
+      }
+      
+      .dropdown-menu.visible {
+        display: block;
+      }
+    }
+      
       </style>
     </head>
       
@@ -177,11 +286,25 @@
     <%= render 'layouts/header' %>
     <div class="container">
       <% flash.each do |message_type, message| %>
-      <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
       <div class="alert alert-<%= message_type %>"><%= message %></div>
     <% end %>
     <%= yield %>
     <%= render 'layouts/footer' %>
     </div>
+    <script>
+      var hamburger = document.querySelector('.navbar-header');
+      var menu = document.querySelector('ul.nav.navbar-nav.navbar-right');
+      
+      hamburger.addEventListener('click', function() {
+        menu.classList.toggle('visible');
+        })
+        
+      var accountmenu = document.querySelector('li.dropdown');
+      var dropdownmenu = document.querySelector('ul.dropdown-menu');
+      
+      accountmenu.addEventListener('click', function() {
+        dropdownmenu.classList.toggle('visible');
+        })
+    </script>
   </body>
 </html>
