--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -206,6 +206,20 @@
         margin-top: 20px;
       }
       
+      .checkbox {
+        margin-top: -10px;
+        margin-bottom: 10px;
+      }
+      
+      .checkbox span {
+        margin-left: 20px;
+        font-weight: normal;
+      }
+      
+      #session_remember_me {
+        width: auto;
+        margin-left: 0;
+      }
       @media (max-width: 800px) {
         .navbar-header {
           width: 35px;
