--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,4 +11,15 @@
 		<section class="user_info">
 		</section>
 	</aside>
+	<div class="col-md-8">
+		<% if @user.microposts.any? %>
+		<h3>Microposts (<%= @user.microposts.count %>)</h3>
+		<ol class="microposts">
+			<%= render @microposts %>
+		</ol>
+		<div class="digg_pagination">
+		<%= will_paginate @microposts %>
+		</div>
+		<% end %>
+	</div>
 </div>
